no longer overlaps and looks cleaner

--- a/web/src/less/documents-upload.less
+++ b/web/src/less/documents-upload.less
@@ -8,9 +8,9 @@
 }
 
 .subtitle {
-    margin-top: 2.5em;
     border-bottom: 1px solid #cccccc;
     padding-bottom: 6px;
+    margin-top: 0;
 }
 
 .documents-upload {
@@ -25,6 +25,10 @@
         &-is-inactive {
             display: none;
         }
+    }
+
+    .section {
+        margin-bottom: 5rem;
     }
 }
 
@@ -45,6 +49,43 @@
 }
 
 .dropzone {
+    &-container {
+        overflow: hidden;
+
+        &.is-empty {
+            height: 170px;
+        }
+
+        &.is-1 {
+            height: 240px;
+        }
+
+        &.is-2 {
+            height: 280px;
+        }
+
+        &.is-3 {
+            height: 330px;
+        }
+
+        &.is-4 {
+            height: 390px;
+        }
+
+        &.is-5 {
+            height: 440px;
+        }
+
+        &.is-6 {
+            height: 490px;
+        }
+
+        &.is-large {
+            height: 500px;
+        }
+
+    }
+
     &-area {
         margin-top: 15px;
         height: 60px;
@@ -60,6 +101,12 @@
                 margin-top: -15px;
             }
         }
+    }
+
+    .previews {
+        height: 320px;
+        overflow-y: auto;
+        overflow-x: hidden;
     }
 
     .file-row {
